syntax = "proto3";

package syft.core.node.common.action;

import "proto/protobuffers/core/common/common_object.proto";
import "proto/protobuffers/core/io/address.proto";
import "proto/protobuffers/core/pointer/pointer.proto";

message GetSetStaticAttributeAction {
  string path = 1;
  syft.core.pointer.Pointer set_arg = 2;
  syft.core.common.UID id_at_location = 3;
  syft.core.io.Address address = 4;
  syft.core.common.UID msg_id = 5;
  int32 action = 6;
}