syntax = "proto3";

package syft.core.node.common.action;

import "proto/protobuffers/core/store/store_object.proto";
import "proto/protobuffers/core/io/address.proto";

message SaveObjectAction {
  syft.core.store.StorableObject obj = 1;
  syft.core.io.Address address = 2;
}