syntax = "proto3";

package syft.core.store;

import "proto/core/common/common_object.proto";
import "google/protobuf/any.proto";

message StorableObject {
  syft.core.common.UID id = 1;
  string data_type = 2;
  string schematic_qualname = 3;
  google.protobuf.Any data = 4;
  string description = 5;
  repeated string tags = 6;
  // fix by making Dict not StorableObject
  bytes read_permissions = 7;
  // fix by making Dict not StorableObject
  bytes search_permissions = 8;
}